utilities/stringify_attr/src/tests/derive/container2.stderr
error: Unexpected attribute
  --> $DIR/container2.rs:19:38
   |
19 |     #[stringify_attr(serde(rename(A, path = "A")))]
   |                                      ^^^^^^^^^^
